Make it more brainly-style. Make it run on old-phones

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="main.css" />
-    <meta name="theme-color" content="#E91E63" />
+    <meta name="theme-color" content="#ff796b" />
     <meta name="viewport" id="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=4.0, user-scalable=1"/>
 </head>
 <body>
     <button>
-        Do a jungle sound for me
+        Tell me something I already know
         <span class="progress"></span>
     </button>
-    <script src="main.js"></script>
+    <script src="main.es5.js"></script>
 </body>
 </html>
