Tatara made me do things to the button

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="main.css" />
     <meta name="theme-color" content="#ff796b" />
     <meta name="viewport" id="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=4.0, user-scalable=1"/>
+
+    <link rel="icon" type="image/x-icon" href="https://styleguide.brainly.com/images/favicons/brainly/favicon-0c2222f36b.ico">
+    <link rel="icon" sizes="192x192" href="https://styleguide.brainly.com/images/favicons/brainly/favicon-hd-0865c7f19f.png">
 </head>
 <body>
     <button>
-        Tell me something I already know
+        Tell me something<br/>I already know
         <span class="progress"></span>
     </button>
     <script src="main.es5.js"></script>
