Title is v.important I'm told

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="icon" type="image/x-icon" href="https://styleguide.brainly.com/images/favicons/brainly/favicon-0c2222f36b.ico">
     <link rel="icon" sizes="192x192" href="https://styleguide.brainly.com/images/favicons/brainly/favicon-hd-0865c7f19f.png">
+
+    <title>🦄🐼🐹</title>
 </head>
 <body>
     <button>
